Versão com licitacao transacao categoria